# L476Nucleo

./: .gitignore  .mxproject  CMakeLists.txt  L476Nucleo.ioc  Makefile  STM32L476XX_FLASH.ld  hardware_todo.md  main.py  pyproject.toml  pyrightconfig.json
Core/Inc/: detector.h  diskio_test.h  main.h  sdcard.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: detector.c  diag.c  diag.h  diskio_test.c  main.c  mic.c  mic.h  ringbuf.c  ringbuf.h  sdcard.c  sdcard.h  stm32l4xx_hal_msp.c  stm32l4xx_it.c
cmake/stm32cubemx/: CMakeLists.txt
notes/: specs.md  todo.md
tests/: Makefile  run_tests.sh  test_diskio.c  test_ringbuf.c
tests/stubs/: ff_gen_drv.h  user_diskio.h
tools/: plot_audio.py  uart_diag.py
tools/audio/: common.py  filters.py  play_bin.py  playback.py  plot.py  save.py  spectrogram.py  spectrogram_live.py  spike.py
