[project]
name = "l476nucleo"
version = "0.1.0"
description = "Sound sensor project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyserial>=3.5",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/audio"]
